Add TDB2 as a source and allow benchmarking against a single source that contains the materialization of the union of all sources.