@@ -1,5 +1,8 @@
 package com.github.alexishuf.fastersparql.lrb.sources;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.Set;
 
 public enum LrbSource {
@@ -15,10 +18,15 @@ public enum LrbSource {
     LinkedTCGA_M,
     LMDB,
     NYT,
-    SWDFood;
+    SWDFood,
+    LargeRDFBench_all;
 
-    private static final Set<LrbSource> ALL = Set.of(values());
-
+    private static final Set<LrbSource> ALL;
+    static {
+        LinkedHashSet<LrbSource> mutable = new LinkedHashSet<>(Arrays.asList(values()));
+        mutable.remove(LargeRDFBench_all);
+        ALL = Collections.unmodifiableSet(mutable);
+    }
     public static Set<LrbSource> all() { return ALL; }
 
     public static LrbSource tolerantValueOf(CharSequence cs) {
@@ -36,6 +44,7 @@ public enum LrbSource {
             case "lmdb", "linkedmdb" -> LMDB;
             case "nyt", "nytimes" -> NYT;
             case "swdfood", "swdogfood" -> SWDFood;
+            case "union", "largerdfbenchall", "all", "largerdfbench" -> LargeRDFBench_all;
             default -> throw new IllegalArgumentException("Unknown source "+cs);
         };
     }
@@ -43,6 +52,7 @@ public enum LrbSource {
     public String filename(SourceKind type) {
         if      (type.isHdt())     return name().replace('_', '-') + ".hdt";
         else if (type.isFsStore()) return name().replace('_', '-');
+        else if (type.isTdb2())    return name().replace('_', '-') + ".tdb";
         else                       return name();
     }
 
